buildscript {
    repositories {
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
}

apply plugin: 'org.spongepowered.mixin'

version = mod_version
group = mod_group_id

base {
    archivesName = "${mod_id}-forge-${minecraft_version}"
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true
    // Dev-only: Forge ignores access transformers that live inside dependency
    // mod jars, so AE2's has to be supplied by the project for its blocks to
    // load in `runClient`/`runServer`. Not shipped — see the file's header.
    accessTransformer = file('gradle/dev/ae2-dev-accesstransformer.cfg')

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all',
                    '--output', file('src/generated/resources/'),
                    '--existing', file('src/main/resources/')
        }
    }
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = 'https://modmaven.dev/'
        content {
            includeGroup 'appeng'
            includeGroup 'org.appliedenergistics'
            includeGroup 'mekanism'
            includeGroup 'dev.technici4n'
            includeGroup 'de.mari_023'
        }
    }
    maven {
        name = 'CurseMaven'
        url = 'https://www.cursemaven.com'
        content {
            includeGroup 'curse.maven'
        }
    }
    maven {
        name = 'Modrinth'
        url = 'https://api.modrinth.com/maven'
        content {
            includeGroup 'maven.modrinth'
        }
    }
    maven {
        name = 'Curios'
        url = 'https://maven.theillusivec4.top/'
        content {
            includeGroup 'top.theillusivec4.curios'
        }
    }
    maven {
        name = 'BlameJared'
        url = 'https://maven.blamejared.com/'
    }
    maven {
        name = 'Architectury'
        url = 'https://maven.architectury.dev/'
        content {
            includeGroup 'dev.architectury'
        }
    }
    maven {
        name = 'Shedaniel'
        url = 'https://maven.shedaniel.me/'
        content {
            includeGroup 'me.shedaniel.cloth'
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    implementation fg.deobf("appeng:appliedenergistics2-forge:${ae2_version}")

    // AE2 Lightning Tech owns the packaged-provider host APIs (frequency binding,
    // wireless provider policy, encoded-pattern validation) plus the wireless
    // connection support types this addon builds on.
    implementation(fg.deobf("com.moakiee.ae2lt:ae2lt:${ae2lt_version}")) {
        // This addon declares its own development runtime. Do not inherit
        // AE2LT's full local-development mod set.
        transitive = false
    }

    // Thunderbolt Core owns the host-neutral overload pattern contract.
    compileOnly(fg.deobf("com.moakiee.thunderbolt:thunderbolt:${thunderbolt_version}")) {
        transitive = false
    }
    runtimeOnly(fg.deobf("com.moakiee.thunderbolt:thunderbolt:${thunderbolt_version}")) {
        transitive = false
    }

    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
    if ((findProperty('enable_curios_runtime') ?: 'true').toBoolean()) {
        runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
    }

    compileOnly fg.deobf("maven.modrinth:applied-energistics-2-wireless-terminals:${ae2wtlib_version}")
    if ((findProperty('enable_ae2wtlib_runtime') ?: 'true').toBoolean()) {
        runtimeOnly fg.deobf("maven.modrinth:applied-energistics-2-wireless-terminals:${ae2wtlib_version}")
        // AE2WTLib declares both as mandatory on 1.20.1.
        runtimeOnly fg.deobf("dev.architectury:architectury-forge:${architectury_version}")
        runtimeOnly fg.deobf("me.shedaniel.cloth:cloth-config-forge:${cloth_config_version}")
    }

    runtimeOnly fg.deobf("org.appliedenergistics:guideme:${guideme_version}")

    if ((findProperty('enable_jei_runtime') ?: 'true').toBoolean()) {
        runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
    }
    if ((findProperty('enable_jade_runtime') ?: 'true').toBoolean()) {
        runtimeOnly fg.deobf("curse.maven:jade-324717:${jade_file_id}")
    }

    // MixinExtras ships inside the production jar and joins the dev classpath.
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.4.1")) {
        jarJar.ranged(it, "[0.4.1,)")
    }
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly(fg.deobf("com.moakiee.thunderbolt:thunderbolt:${thunderbolt_version}")) {
        transitive = false
    }

    // ============================================================
    // Runtime mods for multiblock adapter integration testing.
    //
    // Every adapter under logic/multiblock/<mod>/ reaches its target mod purely by
    // reflection, so none of these are needed to compile. They stay opt-in so that
    // a plain `gradlew build` does not depend on third-party availability. Enable
    // with -Penable_integration_runtime=true .
    // ============================================================
    if ((findProperty('enable_integration_runtime') ?: 'false').toBoolean()) {
        // Library dependencies shared by multiple target mods
        runtimeOnly fg.deobf("maven.modrinth:cucumber:5.1.6")                   // MA + EC
        runtimeOnly fg.deobf("maven.modrinth:patchouli:1.20.1-84-FORGE")        // AA
        runtimeOnly fg.deobf("maven.modrinth:geckolib:4.4.9")                   // Occultism + Ars
        runtimeOnly fg.deobf("maven.modrinth:smartbrainlib:1.13")               // Occultism
        runtimeOnly fg.deobf("maven.modrinth:modonomicon:1.20.1-1.60.4")        // Occultism
        runtimeOnly fg.deobf("maven.modrinth:codechicken-lib:4.3.1.480")        // DE
        runtimeOnly fg.deobf("maven.modrinth:brandons-core:3.1.1.171")          // DE

        // Target mods (one adapter package per mod)
        runtimeOnly fg.deobf("maven.modrinth:actually-additions:1.20.1-1.3.5")  // aa/
        runtimeOnly fg.deobf("maven.modrinth:ars-nouveau:4.12.3")               // ars/
        runtimeOnly fg.deobf("maven.modrinth:mystical-agriculture:7.0.9")       // ma/
        runtimeOnly fg.deobf("maven.modrinth:extended-crafting:6.0.5")          // ec/
        runtimeOnly fg.deobf("maven.modrinth:occultism:1.100.2")                // occultism/
        runtimeOnly fg.deobf("maven.modrinth:draconic-evolution:3.1.0.579")     // de/
    }
}

// Provider persistence tests exercise real Minecraft NBT and registry types,
// so reuse the Minecraft/Forge classpath already available to main.
sourceSets.test.compileClasspath += sourceSets.main.compileClasspath
sourceSets.test.runtimeClasspath += sourceSets.main.runtimeClasspath

test {
    useJUnitPlatform()
}

// Expand the declared replace properties in the mod metadata resources.
tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version        : minecraft_version,
            minecraft_version_range  : minecraft_version_range,
            forge_version            : forge_version,
            forge_version_range      : forge_version_range,
            loader_version_range     : loader_version_range,
            mod_id                   : mod_id,
            mod_name                 : mod_name,
            mod_license              : mod_license,
            mod_version              : mod_version,
            mod_authors              : mod_authors,
            mod_description          : mod_description,
            ae2_version_range        : ae2_version_range,
            ae2lt_version_range      : ae2lt_version_range,
            thunderbolt_version_range: thunderbolt_version_range,
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    archiveClassifier = 'slim'

    from('LICENSE') {
        into 'META-INF'
    }

    // MixinGradle contributes the refmap to production jars, and the dev resource
    // output carries the same file. Keep one copy without weakening duplicate
    // checks for unrelated archive entries.
    filesMatching("${mod_id}.refmap.json") {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }

    manifest {
        attributes([
                'Specification-Title'   : mod_id,
                'Specification-Vendor'  : mod_authors,
                'Specification-Version' : '1',
                'Implementation-Title'  : project.name,
                'Implementation-Version': project.jar.archiveVersion,
                'Implementation-Vendor' : mod_authors,
                'MixinConfigs'          : "${mod_id}.mixins.json",
        ])
    }

    finalizedBy 'reobfJar'
}

tasks.named('jarJar', Jar).configure {
    archiveClassifier = ''
    from('LICENSE') {
        into 'META-INF'
    }
    finalizedBy 'reobfJarJar'
}

afterEvaluate {
    tasks.findByName('reobfJarJar')?.configure {
        mustRunAfter 'jar'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xmaxerrs' << '5000'
    // Force English javac output so logs stay stable across locales.
    options.fork = true
    options.forkOptions.jvmArgs = ['-Duser.language=en', '-Duser.country=US']
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifactId = mod_id
            artifact(tasks.named('jarJar')) {
                classifier = null
            }
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
